[gd_scene load_steps=9 format=3 uid="uid://dup8g6o47r7h4"]

[ext_resource type="Script" path="res://milktea_port_1.gd" id="1_8iw8a"]
[ext_resource type="Texture2D" uid="uid://d2s3mxcjusdkh" path="res://Assets/Opdelt porte/milktea_port_h.png" id="2_t3vwd"]
[ext_resource type="Texture2D" uid="uid://br6x1k4rsoif4" path="res://Assets/Opdelt porte/milktea_port_v.png" id="3_dsoly"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rgmcp"]
size = Vector2(65, 20)

[sub_resource type="Animation" id="Animation_d1onu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("milktea_h_1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(17, 2.08165e-12)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("milktea_v_2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-14, 2.08165e-12)]
}

[sub_resource type="Animation" id="Animation_h61gl"]
resource_name = "milktea_port_close_1"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("milktea_h_1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(33, 2.08165e-12), Vector2(17, 2.08165e-12)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("milktea_v_2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-33, 2.08165e-12), Vector2(-14, 2.08165e-12)]
}

[sub_resource type="Animation" id="Animation_2i78v"]
resource_name = "milktea_port_open_1"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("milktea_h_1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(17, 2.08165e-12), Vector2(33, 2.08165e-12)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("milktea_v_2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-14, 2.08165e-12), Vector2(-33, 2.08165e-12)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_km3hc"]
_data = {
"RESET": SubResource("Animation_d1onu"),
"milktea_port_close_1": SubResource("Animation_h61gl"),
"milktea_port_open_1": SubResource("Animation_2i78v")
}

[node name="milktea_port_1" type="StaticBody2D"]
script = ExtResource("1_8iw8a")

[node name="milktea_h_1" type="Sprite2D" parent="."]
position = Vector2(17, 2.08165e-12)
texture = ExtResource("2_t3vwd")

[node name="milktea_v_2" type="Sprite2D" parent="."]
position = Vector2(-14, 2.08165e-12)
texture = ExtResource("3_dsoly")

[node name="milktea_port_collision_1" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 0)
shape = SubResource("RectangleShape2D_rgmcp")

[node name="ap_milktea_1" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_km3hc")
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="timeout" from="Timer" to="." method="close_port"]
